# Aning

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Makefile  components.json  eslint.config.js  get-db-path.js  index.html  package.json  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
memory/: ARCHITECTURE-2025-09-14-系统架构完整文档.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_chat.rs  ai_commands.rs  ai_test.rs  cardbox_commands.rs  commands.rs  crypto.rs  database.rs  knowledge.rs  main.rs  meeting_commands.rs.bak  password_commands.rs  timeline.rs
src-tauri/src/commands/: book.rs  douban.rs
src-tauri/windows/: LICENSE.txt  hooks.nsh
src/components/: index.ts
src/config/: animation.ts
src/constants/: commonIcons.ts  iconMigrationMap.ts
src/hooks/: index.ts  useResponsive.ts  useTheme.ts  useTypewriter.ts
src/pages/: FastHome.tsx  Habit.tsx  Home.tsx  LexicalEditor.tsx  MindBoard.tsx  TaskBox.tsx  Timeline.tsx
src/services/: suggestionService.ts
src/stores/: appStore.ts  bookStore.ts  cardBoxStore.ts  dialogStore.ts  dialogueContextStore.ts  habitStore.ts  homeStore.ts  index.ts  knowledgeStore.ts  mindBoardStore.ts  noteStore.ts  passwordStore.ts  taskBoxStore.ts  timelineStore.ts  toastStore.ts
src/styles/: index.css  rich-editor.css  theme.css
src/types/: aiConfig.ts  book.ts  database.ts  dialogue.ts  index.ts  lexical-stubs.d.ts  mindBoard.ts  password.ts
src/utils/: cn.ts  (+15 more)
(+222 files in other folders)
