[package]
name = "anning"
version = "0.1.0"
description = "Anning - Personal Knowledge Management System"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
lazy_static = "1.4"
mime_guess = "2.0"
regex = "1.10"
url = "2.5"
urlencoding = "2.0"
